# milestone-escrow

./: .gitignore  Cargo.toml  README.md  deployment-evidence.md  rewrite_history.py  rewrite_history_gradual.py  wrangler.toml
.github/workflows/: ci.yml
contracts/arbiter/: Cargo.toml
contracts/arbiter/src/: lib.rs  test.rs
contracts/arbiter/test_snapshots/test/: create_escrow_stores_milestones_locked.1.json  dispute_then_resolve_approve_pays_out.1.json  double_release_fails.1.json  fund_escrow_rejects_mismatched_amount.1.json  release_milestone_direct_call_fails.1.json  release_milestone_via_arbiter_pays_recipient.1.json
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/app/architecture/: page.tsx
frontend/app/faq/: page.tsx
frontend/components/: ActionPanel.tsx  CreateEscrowForm.tsx  ErrorBanner.tsx  EscrowViewer.tsx  MilestoneStepper.tsx  SiteFooter.tsx  SiteNav.tsx  WalletButton.tsx
frontend/lib/: WalletContext.tsx  balance.ts  env.ts  format.test.ts  format.ts  scval-encoding.test.ts  soroban.ts  types.ts  useEscrow.ts  wallet.ts
